# incolata

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  application.cpp  application.h  config.h.in  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  exerciserowwidget.cpp  exerciserowwidget.h  exerciserowwidget.ui  exercisesmodel.cpp  exercisesmodel.h  fitfactorchartview.cpp  fitfactorchartview.h  incolata_common.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocol.cpp  protocol.h  protocolsmodel.cpp  protocolsmodel.h  sequentialseriesscrollingchartview.cpp  sequentialseriesscrollingchartview.h  testworker.cpp  testworker.h
.github/workflows/: checks.yml
docs/: 8020.md  fit_test_general.md  index.md
resources/: resources.qrc
